# apollo-rust-sdk

./: Cargo.toml  README.md
examples/: config-client-example.rs  openapi-client-example.rs  sample-example.rs
src/: lib.rs
src/client/: apollo_config_client.rs  apollo_openapi_client.rs  apollo_portal_client.rs  error.rs  meta_server.rs  mod.rs
