[package]
name = "apollo-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio-test = "*"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
base64 = "0.20.0"
rust-crypto = "^0.2"
url = { version = "2", features = ["serde"] }

